# meta-final-

./: .gitignore  README.md  TOP1_CONTEXT_BREACH_PLAYBOOK.md  openenv.yaml  pyproject.toml  requirements-training.txt
benchmarks/: README.md  slabs-dev-100.jsonl  smoke.jsonl
config/: authorization-policy.example.json  ingestion_config.yaml
context_breach_env/: __init__.py  benchmarking.py  client.py  models.py  scenarios.py
docs/: GATEWAY_AUTHENTICATION.md  GATEWAY_OBSERVABILITY.md  GATEWAY_RELIABILITY.md  GATEWAY_STORAGE.md  IMPLEMENTATION_ROADMAP.md  MCP_TOOL_INTERCEPTION.md  PRODUCTION_ARCHITECTURE.md
notebooks/: context_breach_trl_colab.ipynb  context_breach_trl_kaggle.ipynb  meta-final.ipynb
results/: detector-disagreements.json  gateway-reliability-local-2026-07-22.json  heuristic-slabs-100.json  llm-guard-slabs-100.json  policy_comparison.json  qwen-slabs-100.json  tabular_training_metrics.json
scripts/: benchmark_detectors.py  eval_trained_model.py  evaluate_baseline.py  evaluate_production_controls.py  generate_after_results.py  generate_demo_trace.py  generate_results.py  load_test_gateway.py  mps_smoke_test.py  plot_training_curves.py  run_hf_job.sh  smoke_mcp_gateway.py  smoke_signed_gateway.py  train_tabular_policy.py  train_trl_grpo.py  train_trl_stub.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
space/: PITCH_OUTLINE.md  README.md  app.py  real_world_attacks.json  requirements.txt
tests/: test_authorization_gateway.py  test_baseline_policy.py  test_benchmarking.py  test_environment.py  test_gateway_observability.py  test_gateway_persistence.py  test_gateway_reliability.py  test_mcp_gateway.py  test_production_security.py  test_secret_hygiene.py  (+1 more)
(+23 files in other folders)
